js/js.translator/testData/incremental/invalidation/inlineFunctionWithObject/lib2/l2.1.kt
inline fun foo(): DemoInterface {
    return object : DemoInterface {
        override fun doAnything(): Int {
            return 1
        }
    }
}
